<resources>
    <string name="app_name">Easybutor Distributor</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home/Login</string>
    <string name="menu_gallery">My Orders</string>
    <string name="menu_slideshow">Admin Panel</string>
    <string name="menu_account">Your Account</string>
    <string name="menu_customer_service">Customer Service</string>
    <string name="cart">Cart</string>
    <string name="menu_category">Category</string>
    <string name="menu_distributor">Registration</string>
    <string name="menu_products">My Products</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_payment">Payments</string>
    <string name="menu_add_new">Add new product</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_dash">Dashboard</string>
    <string name="logout">Logout</string>

    <string-array name="categories">
        <item>Category</item>
        <item>Fashion</item>
        <item>Mobiles</item>
        <item>Electronics</item>
        <item>Home</item>
        <item>Appliances</item>
        <item>Beauty</item>
        <item>Toys &amp; Baby</item>
        <item>Furniture</item>
        <item>Sports</item>
        <item>Electronics</item>
        <item>Grocery</item>
        <item>Food &amp; more</item>
        <item>Refurbished</item>
    </string-array>
    <string-array name="sub_categories">
        <item>Sub-Category</item>
        <item>Sub Categories 2</item>
        <item>Sub Categories 3</item>
        <item>Sub Categories 4</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>