<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_dash"
            android:icon="@drawable/ic_dash"
            android:title="@string/menu_dash"
            android:visible="false" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_add_new_product"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_add_new" />
        <item
            android:id="@+id/nav_admin_panel"
            android:icon="@drawable/ic_admin"
            android:title="@string/menu_slideshow"
            android:visible="false" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_category"
            android:visible="false" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_distributor"
            android:visible="false" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@android:drawable/stat_sys_upload_done"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_account"
            android:visible="false" />

        <item
            android:id="@+id/nav_customer_service"
            android:icon="@drawable/ic_customer_service"
            android:title="@string/menu_customer_service"
            android:visible="false" />
        <item
            android:id="@+id/nav_logout"
            android:visible="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>