<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.thedramaticcolumnist.appdistributor.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            android:id="@+id/home_to_AddProducts"
            app:destination="@id/nav_add_new_product" />
        <action
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            android:id="@+id/home_to_viewCategoryProducts"
            app:destination="@id/viewCategoryProducts" />
    </fragment>

    <fragment
        android:id="@+id/nav_order"
        android:name="com.thedramaticcolumnist.appdistributor.ui.Order.OrderFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/order_fragment" >
        <action
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            android:id="@+id/order_to_orderDetail"
            app:destination="@id/orderDetail" />
    </fragment>

    <fragment
        android:id="@+id/nav_admin_panel"
        android:name="com.thedramaticcolumnist.appdistributor.ui.WishList.AdminPanelFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/admin_panel_fragment" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.thedramaticcolumnist.appdistributor.ui.YourAccount.YourAccount"
        android:label="@string/menu_account"
        tools:layout="@layout/your_account_fragment" />
    <fragment
        android:id="@+id/nav_customer_service"
        android:name="com.thedramaticcolumnist.appdistributor.ui.CustomerService.CustomerService"
        android:label="@string/menu_customer_service"
        tools:layout="@layout/customer_fragment" />
    <fragment
        android:id="@+id/nav_category"
        android:name="com.thedramaticcolumnist.appdistributor.ui.Category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/category_fragment" />
    <fragment
        android:id="@+id/nav_registration"
        android:name="com.thedramaticcolumnist.appdistributor.ui.Distributor.RegistratoionFragment"
        android:label="@string/menu_distributor"
        tools:layout="@layout/registration_fragment" />
    <fragment
        android:id="@+id/nav_products"
        android:name="com.thedramaticcolumnist.appdistributor.ui.Products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/products_fragment" >
        <action
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            android:id="@+id/products_to_productDetail"
            app:destination="@id/productDetail" />
    </fragment>
    <fragment
        android:id="@+id/vendorAddProducts"
        android:name="com.thedramaticcolumnist.appdistributor.ui.VendorAddPorduct.VendorAddProducts"
        android:label="Add Products"
        tools:layout="@layout/vendor_add_products" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.thedramaticcolumnist.appdistributor.ui.Setting.Setting"
        android:label="Settings"
        tools:layout="@layout/setting" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.thedramaticcolumnist.appdistributor.ui.Profile.MyProfile"
        android:label="My Account"
        tools:layout="@layout/payments" >
        <action
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            android:id="@+id/profile_to_products"
            app:destination="@id/nav_products" />
        <action

            android:id="@+id/profile_to_order"
            app:destination="@id/nav_order"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_new_product"
        android:name="com.thedramaticcolumnist.appdistributor.ui.AddNewProduct.AddNewProduct"
        android:label="Add new product"
        tools:layout="@layout/add_new_product" >
        <action
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            android:id="@+id/add_new_product_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="id"
            app:argType="string"
            app:nullable="true"
            android:defaultValue='""' />
    </fragment>
    <fragment
        android:id="@+id/nav_message"
        android:name="com.thedramaticcolumnist.appdistributor.ui.Messages.Message"
        android:label="Messages"
        tools:layout="@layout/message" />
    <fragment
        android:id="@+id/nav_dash"
        android:name="com.thedramaticcolumnist.appdistributor.ui.Dashboard.Dashboard"
        android:label="Dashboard"
        tools:layout="@layout/dashboard" />

    <fragment
        android:id="@+id/productDetail"
        android:name="com.thedramaticcolumnist.appdistributor.ui.Products.ViewProducts.ProductDetail"
        android:label="Details"
        tools:layout="@layout/product_detail">
        <argument
            android:name="id"
            app:argType="string" />
        <action
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            android:id="@+id/productDetail_to_nav_add_new_product"
            app:destination="@id/nav_add_new_product" />
    </fragment>

    <fragment
        android:id="@+id/viewCategoryProducts"
        android:name="com.thedramaticcolumnist.appdistributor.ui.Products.ViewCategoryProducts.ViewCategoryProducts"
        android:label="Products"
        tools:layout="@layout/view_category_products" >

        <argument
            android:name="category"
            app:argType="string" />
        <action
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            android:id="@+id/action_viewCategoryProducts_to_productDetail"
            app:destination="@id/productDetail" />
    </fragment>
    <fragment
        android:id="@+id/orderDetail"
        android:name="com.thedramaticcolumnist.appdistributor.ui.OrderDetail.OrderDetail"
        android:label="order_detail"
        tools:layout="@layout/order_detail" >
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
</navigation>